base/src/test/resources/failure/syntax/issue293.aya.txt
In file $FILE:7:37 ->

  5 |   | 我们
  6 |   | 他们
  7 | def 测测测测测测测测测 : 单人代词 => 我们
                                           ^-^

Error: Cannot check the expression of type
         多人代词
       against the type
         单人代词

1 error(s), 0 warning(s).
What are you doing?
